# Radiation-Control

./: CMakeLists.txt  CMakeLists.txt.now_void  CMakeWrapper.sh  Makefile  Makefile_arm~  NavAP.cpp  NavAP.h  README.md  RayBox.cpp  RayBox.h  UDPclient.cpp  UDPserver.cpp  UDPserver.h  UDPserver.py  cmake_install.cmake  docs_config  main  main.cpp  new_output.txt  opcodes.h  types.h
documentation/html/: annotated.html  classNavAP-members.html  classNavAP.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6bc6ad22483805bbbda55258ad2a62ea.html  files.html  functions.html  functions_func.html  index.html  navap_8h_source.html  structNavAP_1_1objectProperties-members.html  structNavAP_1_1objectProperties.html
documentation/html/search/: all_1.js  all_2.js  all_3.js  all_5.js  all_7.js  classes_0.js  classes_1.js  functions_0.js  functions_4.js  functions_5.js  searchdata.js
documentation/latex/: annotated.tex  classNavAP.tex  refman.tex  structNavAP_1_1objectProperties.tex
opencl/: rayintersect.cl
src/: .raybox.cpp.swp  aclutil.cpp  cleanup.cpp  compute.cpp  main.cpp  navap.cpp  navap.cpp~  opencl.cpp  opencl.cpp~  raybox.cpp  rayintersect.cl  udpserver.cpp
src/inc/: cleanup.h  compute.h  navap.h  opcodes.h  opencl.h  parallel.h  raybox.h  types.h  udpserver.h
