cmake_minimum_required (VERSION 2.6)
project (Radiation-Control)

set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")

set (PROJECT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src)
set (CMAKE_BUILD_DIRECTORY ${CMAKE_SOURCE_DIR}/build)
set (CMAKE_BUILD_FILES_DIRECTORY ${CMAKE_SOURCE_DIR}/build)
set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

set (INCLUDE_DIRECTORIES ${PROJECT_SOURCE_DIR}/inc)

file(GLOB_RECURSE SOURCE_FILES
	"${PROJECT_SOURCE_DIR}/*.cpp"
	"${INCLUDE_DIRECTORIES}/*.h"
)

install(DIRECTORY DESTINATION ${BUILD_OUTPUT_PATH})
install(DIRECTORY DESTINATION ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})

add_executable(Radiation-Control ${SOURCE_FILES})

include_directories(${INCLUDE_DIRECTORIES}) 


